[package]
name = "backlight-sync"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddc-hi = "0.4.1"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
tokio = { version = "1.37.0", default-features = false, features = ["rt", "macros", "process", "time"] }
tokio-udev = "0.9.1"
